# RustyCode

./: Cargo.toml  README.md  opencode-api.json
.github/workflows/: rust.yml
examples/: paste_diag.rs
src/: config.rs  main.rs
src/api/: client.rs  events.rs  mod.rs  tests.rs
src/app/: event_loop.rs  mod.rs  state.rs  tests.rs
src/input/: mod.rs
src/types/: command.rs  event.rs  file.rs  message.rs  misc.rs  mod.rs  part.rs  permission.rs  project.rs  provider.rs  session.rs  tests.rs
src/ui/: mod.rs
src/ui/components/: editor.rs  message_list.rs  mod.rs  sidebar.rs  status_bar.rs  thinking_bar.rs
src/ui/dialogs/: commands.rs  help.rs  mod.rs  models.rs  permission.rs  question.rs  quit.rs  session.rs  theme.rs
src/ui/pages/: chat.rs  logs.rs  mod.rs
src/ui/themes/: mod.rs
