[package]
name = "opencode-tui"
version = "0.1.0"
edition = "2021"
description = "A Ratatui-based TUI for OpenCode"

[dependencies]
# TUI
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP + SSE
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
eventsource-stream = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
clap = { version = "4", features = ["derive", "env"] }
bytes = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.2"
textwrap = "0.16"
open = "5"

[profile.release]
opt-level = 3
lto = true
strip = true
